# wyoming-helm

./: .gitignore  .release-please-manifest.json  README.md  index.yaml  release-please-config.json  renovate.json
.github/workflows/: build-kokoro-wyoming.yaml  build-llamacpp-intel.yaml  build-ollama-intel.yaml  build-ollama-upstream.yaml  build-wyoming-kanitts.yaml  release-please.yaml
charts/kokoro-wyoming/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/kokoro-wyoming/docker/: Dockerfile  main.py  requirements.txt
charts/kokoro-wyoming/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
charts/ollama-intel/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/ollama-intel/docker/: Dockerfile
charts/ollama-intel/scripts/: download-ollama-model.py
charts/ollama-intel/templates/: NOTES.txt  _helpers.tpl  llamacpp-deployment.yaml  llamacpp-service.yaml  ollama-deployment.yaml  ollama-service.yaml  pvc.yaml  webui-deployment.yaml  webui-ingress.yaml  webui-service.yaml
charts/wyoming-kanitts/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/wyoming-kanitts/docker/: .dockerignore  BUILDING.md  Dockerfile  README.md  pyproject.toml  wyoming_kanitts.py
charts/wyoming-kanitts/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
charts/wyoming-piper/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/wyoming-piper/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
charts/wyoming-whisper/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/wyoming-whisper/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
kokoro-wyoming/: Dockerfile
